--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-test-app",
+  "homepage": "https://HaleemaGit.github.io/shortlisted-aliens",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
